--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -121,6 +121,7 @@
         android:id="@+id/outside"
         android:layout_weight="1"
         android:clickable="true"
+        android:background="#88000000"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
     </FrameLayout>
