--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -9,8 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@drawable/podcast_headphones">
-    </LinearLayout>
+        android:background="@drawable/podcast_headphones"></LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,97 +22,131 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/currentTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="25dp"
+                android:gravity="left"/>
+
+            <TextView
+                android:id="@+id/fullTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="25dp"
+                android:gravity="right"/>/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2">
+
             <ImageView
                 android:id="@+id/sleepBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:src="@drawable/ic_snooze_black_24dp"
-                android:layout_weight="2"
+                android:layout_marginLeft="15dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginLeft="15dp"/>
+                android:layout_weight="2"
+                android:src="@drawable/ic_snooze_black_24dp" />
+
             <ImageView
                 android:id="@+id/replayBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:src="@drawable/ic_replay_10_black_24dp"
+                android:layout_marginTop="20dp"
                 android:layout_weight="2"
-                android:layout_marginTop="20dp"/>
+                android:src="@drawable/ic_replay_10_black_24dp" />
+
             <ImageView
                 android:id="@+id/playBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
-                android:src="@drawable/ic_play_circle_filled_black_24dp"
-                android:layout_weight="3"/>
+                android:layout_weight="3"
+                android:src="@drawable/ic_play_circle_filled_black_24dp" />
+
             <ImageView
                 android:id="@+id/forwardBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:src="@drawable/ic_forward_10_black_24dp"
+                android:layout_marginTop="20dp"
                 android:layout_weight="2"
-                android:layout_marginTop="20dp"/>
+                android:src="@drawable/ic_forward_10_black_24dp" />
+
             <ImageView
                 android:id="@+id/speedBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:src="@drawable/ic_rowing_black_24dp"
-                android:layout_weight="2"
+                android:layout_marginRight="15dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginRight="15dp"/>
+                android:layout_weight="2"
+                android:src="@drawable/ic_rowing_black_24dp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:layout_weight="3">
+
             <ImageView
                 android:id="@+id/previousBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:src="@android:drawable/ic_media_previous"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:src="@android:drawable/ic_media_previous" />
+
             <ImageView
                 android:id="@+id/nextBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:src="@android:drawable/ic_media_next"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:src="@android:drawable/ic_media_next" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:layout_weight="1">
+
             <ImageView
                 android:id="@+id/queueBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_library_books_black_24dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:src="@drawable/ic_library_books_black_24dp" />
+
             <ImageView
                 android:id="@+id/playlistBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_library_books_black_24dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:src="@drawable/ic_library_books_black_24dp" />
+
             <ImageView
                 android:id="@+id/favoriteBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_favorite_black_24dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:src="@drawable/ic_favorite_black_24dp" />
+
             <ImageView
                 android:id="@+id/shareBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:src="@android:drawable/ic_menu_share"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:src="@android:drawable/ic_menu_share" />
         </LinearLayout>
 
     </LinearLayout>
