--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -6,6 +6,7 @@
     android:gravity="center"
     android:orientation="horizontal"
     android:weightSum="100"
+    android:background="@color/black"
     >
 
     <ImageView
