--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -15,54 +15,63 @@
         android:layout_width="wrap_content"
         android:title="Humor"
         android:defaultValue="false"
+        android:dependency="all"
         android:key="humor" />
     <CheckBoxPreference
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:title="Health"
         android:defaultValue="false"
+        android:dependency="all"
         android:key="health" />
     <CheckBoxPreference
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:title="Technology"
         android:defaultValue="false"
+        android:dependency="all"
         android:key="technology" />
     <CheckBoxPreference
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:title="Economy"
         android:defaultValue="false"
+        android:dependency="all"
         android:key="economy" />
     <CheckBoxPreference
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:title="Politics"
         android:defaultValue="false"
+        android:dependency="all"
         android:key="politics" />
     <CheckBoxPreference
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:title="Entertainment"
         android:defaultValue="false"
+        android:dependency="all"
         android:key="entertainment" />
     <CheckBoxPreference
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:title="Music"
         android:defaultValue="false"
+        android:dependency="all"
         android:key="music" />
     <CheckBoxPreference
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:title="Nature"
         android:defaultValue="false"
+        android:dependency="all"
         android:key="nature" />
     <CheckBoxPreference
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:title="History"
         android:defaultValue="false"
+        android:dependency="all"
         android:key="history" />
 
 </PreferenceScreen>
