--- a/app/src/main/res/layout/small_player.xml
+++ b/app/src/main/res/layout/small_player.xml
@@ -18,6 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="?android:attr/progressBarStyleHorizontal"
+            android:layout_marginBottom="-8dp"
+            android:layout_marginTop="-6dp"
              />
 
         <LinearLayout
