--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,6 @@
 
     <include layout="@layout/content_main" />
 
-
-
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,6 +35,7 @@
                 android:layout_gravity="center"
                 android:textColor="#000000"
                 android:textSize="25dp"
+                android:clickable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
