--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -5,7 +5,7 @@
     android:layout_alignParentLeft="true"
     android:gravity="left"
     android:minWidth="200dp"
-    android:layout_width="250dp"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
