--- a/app/src/main/res/layout/episode_list_item.xml
+++ b/app/src/main/res/layout/episode_list_item.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:padding="16dp"
     android:descendantFocusability="blocksDescendants"
     android:layout_width="match_parent"
-    android:layout_height="72dp">
+    android:padding="10dp"
+    android:layout_height="72dp"
+    android:weightSum="100">
 
     <ImageView
-        android:layout_gravity="center"
+        android:id="@+id/episodeIcon"
         android:paddingRight="16dp"
+        android:layout_weight="30"
         android:src="@drawable/ic_favorite_black_24dp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/episodeName"
         android:layout_gravity="center"
         android:text="test"
-        android:layout_weight="2"
-        android:layout_width="wrap_content"
+        android:layout_weight="65"
+        android:layout_width="0dp"
         android:layout_height="wrap_content" />
 
     <ImageButton
         android:id="@+id/itemMenu"
         android:focusable="false"
-        android:layout_weight=".1"
+        android:layout_weight="5"
         android:focusableInTouchMode="true"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_more_vert_black_24dp"
