--- a/app/src/main/res/layout/serie_list_item.xml
+++ b/app/src/main/res/layout/serie_list_item.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal"
     android:padding="16dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="72dp">
 
     <ImageView
         android:id="@+id/serieIcon"
