check all checkboxes when checking allbox

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,7 +7,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:title="All"
-        android:defaultValue="false"
+        android:defaultValue="true"
         android:key="all" />
     <CheckBoxPreference
         android:id="@+id/humorbox"
