--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="100dp"
     android:layout_height="100dp"
     android:padding="16dp" >
 
@@ -12,13 +11,11 @@
         android:layout_gravity="center"
         android:src="@drawable/ic_favorite_black_24dp" >
     </ImageView>
-
     <TextView
         android:id="@+id/grid_item_label"
         android:layout_gravity="bottom"
         android:textAlignment="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
+        android:layout_width="50dp"
+        android:layout_height="50dp">
     </TextView>
-    </LinearLayout>
+</LinearLayout>
