gridview to front page

--- a/app/src/main/res/layout/single_playlist_layout.xml
+++ b/app/src/main/res/layout/single_playlist_layout.xml
@@ -25,6 +25,8 @@
     <ListView
         android:id="@+id/single_playlist_list"
         android:layout_width="match_parent"
+        android:divider="@color/colorAccent"
+        android:dividerHeight="100.0px"
         android:layout_height="wrap_content">
     </ListView>
 
