--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
+    android:orientation="vertical"
     android:padding="16dp" >
-
     <ImageView
         android:id="@+id/grid_item_image"
         android:layout_width="50dp"
@@ -11,11 +11,18 @@
         android:layout_gravity="center"
         android:src="@drawable/ic_favorite_black_24dp" >
     </ImageView>
-    <TextView
-        android:id="@+id/grid_item_label"
-        android:layout_gravity="bottom"
-        android:textAlignment="center"
-        android:layout_width="50dp"
-        android:layout_height="50dp">
-    </TextView>
+    <LinearLayout
+        android:background="@color/colorAccent"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/grid_item_label"
+            android:layout_gravity="bottom"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </TextView>
+    </LinearLayout>
 </LinearLayout>
