--- a/app/src/main/res/layout/serie_layout.xml
+++ b/app/src/main/res/layout/serie_layout.xml
@@ -26,6 +26,17 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/episodeGridview"
+        android:numColumns="2"
+        android:gravity="center"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="0dp"
+        android:stretchMode="columnWidth"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </GridView>
+
     <ListView
         android:id="@+id/serieList"
         android:layout_width="match_parent"
