--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -1,28 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="200dp"
+    android:background="@color/black"
     android:orientation="vertical"
-    android:padding="16dp" >
-    <ImageView
-        android:id="@+id/grid_item_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_favorite_black_24dp" >
-    </ImageView>
+    android:padding="5dp" >
+
     <LinearLayout
-        android:background="@color/colorAccent"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
+        android:background="@color/colorPrimary"
+        android:orientation="vertical"
+        android:weightSum="100"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/grid_item_label"
-            android:layout_gravity="bottom"
-            android:textAlignment="center"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_weight="40"
+            android:id="@+id/grid_item_image"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_favorite_black_24dp" >
+        </ImageView>
+
+        <LinearLayout
+            android:layout_weight="60"
+            android:gravity="center"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </TextView>
+            android:minHeight="100dp"
+            android:weightSum="100"
+            android:paddingBottom="5dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/grid_item_date"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_weight="50"
+                android:text="date"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </TextView>
+            <TextView
+                android:id="@+id/grid_item_label"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_weight="50"
+                android:text="title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </TextView>
+
+        </LinearLayout>
+
     </LinearLayout>
+
 </LinearLayout>
