--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="220dp"
     android:background="@color/black"
     android:orientation="vertical"
     android:padding="5dp" >
@@ -15,9 +15,9 @@
         <ImageView
             android:layout_weight="40"
             android:id="@+id/grid_item_image"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
+            android:layout_gravity="top|center"
             android:src="@drawable/ic_favorite_black_24dp" >
         </ImageView>
 
@@ -29,7 +29,7 @@
             android:minHeight="100dp"
             android:weightSum="100"
             android:paddingBottom="5dp"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <TextView
                 android:id="@+id/grid_item_date"
                 android:textAlignment="center"
