--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="220dp"
+    android:layout_height="200dp"
     android:background="@color/black"
     android:orientation="vertical"
     android:padding="5dp" >
@@ -15,8 +15,8 @@
         <ImageView
             android:layout_weight="40"
             android:id="@+id/grid_item_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="top|center"
             android:src="@drawable/ic_favorite_black_24dp" >
         </ImageView>
@@ -29,6 +29,8 @@
             android:minHeight="100dp"
             android:weightSum="100"
             android:paddingBottom="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:layout_height="match_parent">
             <TextView
                 android:id="@+id/grid_item_date"
@@ -45,6 +47,8 @@
                 android:gravity="center"
                 android:layout_weight="50"
                 android:text="title"
+                android:textStyle="bold"
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </TextView>
