--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -15,9 +15,10 @@
         <ImageView
             android:layout_weight="40"
             android:id="@+id/grid_item_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="top|center"
+            android:scaleType="fitXY"
             android:src="@drawable/ic_favorite_black_24dp" >
         </ImageView>
 
@@ -48,7 +49,6 @@
                 android:layout_weight="50"
                 android:text="title"
                 android:textStyle="bold"
-
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </TextView>
