--- a/app/src/main/res/layout/single_playlist_layout.xml
+++ b/app/src/main/res/layout/single_playlist_layout.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:divider="@color/colorAccent"
         android:dividerHeight="1dp"
-        android:listSelector="@color/colorPrimary"
+        android:groupIndicator="@null"
         android:childDivider="@color/colorPrimaryDark"
         android:layout_height="wrap_content">
     </ExpandableListView>
