--- a/app/src/main/res/layout/child_items.xml
+++ b/app/src/main/res/layout/child_items.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorAccent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:paddingLeft="10dp"
+        android:padding="16dp"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
