--- a/app/src/main/res/layout/episode_list_item.xml
+++ b/app/src/main/res/layout/episode_list_item.xml
@@ -4,6 +4,7 @@
     android:descendantFocusability="blocksDescendants"
     android:layout_width="match_parent"
     android:padding="10dp"
+    android:background="@color/colorPrimary"
     android:layout_height="72dp"
     android:weightSum="100">
 
