--- a/app/src/main/res/layout/child_items.xml
+++ b/app/src/main/res/layout/child_items.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorAccent"
+    android:background="@color/primaryText"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
@@ -13,7 +13,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:padding="16dp"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textColor="@color/black"
+        />
 
 
 </RelativeLayout>
