--- a/app/src/main/res/layout/single_playlist_layout.xml
+++ b/app/src/main/res/layout/single_playlist_layout.xml
@@ -7,13 +7,17 @@
 
     <LinearLayout
         android:id="@+id/headerBox"
-        android:layout_width="match_parent"
         android:background="@color/colorAccent"
-        android:layout_height="200dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/collectionImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/collectionTitle"
-            android:text="Serie"
+            android:id="@+id/title"
             android:textAlignment="center"
             android:layout_gravity="center"
             android:textSize="40dp"
@@ -28,7 +32,7 @@
         android:divider="@color/colorAccent"
         android:dividerHeight="1dp"
         android:groupIndicator="@null"
-        android:childDivider="@color/colorPrimaryDark"
+        android:childDivider="@color/colorAccent"
         android:layout_height="wrap_content">
     </ExpandableListView>
 
